--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,58 +4,63 @@
 title: "简历标题"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
 name: "杨诗蕙"
-jobtitle: "求职意向" #可空不显示
-photo: "assets/img/photo.jpg" #照片可空，不显示
+jobtitle: "数据分析/数据产品" #可空不显示
+photo: "assets/img/WechatIMG29.jpeg" #照片可空，不显示
 
 #联系方式
 contact: #联系方式连接等3~5行
-- text: "youremail@example.com" #文本内容
-  href: 'mailto:youremail@example.com' #链接，无链接则空  
+- text: "hazelyang666@gmail.com" #文本内容
+  href: 'mailto:hazelyang666@gmail.com' #链接，无链接则空  
   icon: 'icons/email.svg' #图标 svg文件
-- text: "1234567890"
-  href: 'tel:1234567890'
+- text: "+86 18826101678"
   icon: 'icons/phone.svg'
-- text: "your-website.com"
-  href: 'http://your-website.com'
-  icon: 'icons/web.svg'
-- text: "GitHubID"
-  href: 'https://github.com/NewFuture'
-  icon: "icons/github.svg"
-  attr: 'target="_blank"' #新标签页打开
+  # - text: "your-website.com"
+  #  href: 'http://your-website.com'
+  #  icon: 'icons/web.svg'
+  # - text: "GitHubID"
+  #  href: 'https://github.com/NewFuture'
+  #  icon: "icons/github.svg"
+  #  attr: 'target="_blank"' #新标签页打开
   # - text: "地址"
   #   icon: "icons/location.svg"
 
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
 - type: education #类别为ID
-  name: 教育 #显示名称，空则使用type
+  name: 教育经历 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
-  - title: 大学名称
-    duration: "2011年x月 - 2015年"
-    sub: 地点或学历
+  - title: 中山大学
+    duration: "2018年9月 - 2021年7月"
+    sub: 管理学硕士
     detail: 专业或者简短说明
-  - title: Your University
-    duration: Aug 2007 - Jun 2011
-    sub: Ut enim ad minim veniam
-    detail: Master Bachelor of Computer Science & Technology.
-
+  - title: UNIVERSITY OF VIRGINIA（弗吉尼亚大学）
+    duration: 2019年9月 - 2020年7月
+    sub: 全球商务硕士
+    detail: Master of Global Commerce
+  - title: 广东外语外贸大学
+    duration: 2014年9月 - 2018年6月
+    sub: 经济学学士
+    detail: 国际经济与贸易
+    
 - type: skills
-  # name: "技能"
+  # name: "技术栈和编程语言"
   content:
   - title: 编程语言
     items: #itmems 可以小块的方式显示
-    - 汉语
-    - 语言2
-    - 语言3
-  - title: Skill Group
+    - SQL
+    - Python
+    - Hive
+    - Spark
+    - Data visualization
+  - title: 个人技能总结
     summary: Consectetur, Adipiscing, Elit
 
 - type: experience
-  name: 经验
+  name: 工作经历
   content:
-  - title: 职位
-    sub: 某某公司
-    duration: "xxxx年xx月 - yyyy年yy月"
+  - title: 腾讯 - 数据科学
+    sub: T5 - T7
+    duration: "2021年7月 - 至今"
     tags:
     - 标签
     summary: 职务或者工作总结(自动折叠)
