--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,7 +1,7 @@
 # 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
 # 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
 
-title: "简历标题"
+title: "杨诗蕙简历"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
 name: "杨诗蕙"
 jobtitle: "数据分析/数据产品" #可空不显示
@@ -30,17 +30,17 @@ main: #简历主要内容，
   name: 教育经历 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
   - title: 中山大学
-    duration: "2018年9月 - 2021年7月"
-    sub: 管理学硕士
-    detail: 专业或者简短说明
+    # duration: 
+    sub: 2018年9月 - 2021年7月
+    detail: 国际商务硕士
   - title: UNIVERSITY OF VIRGINIA（弗吉尼亚大学）
-    duration: 2019年9月 - 2020年7月
-    sub: 全球商务硕士
-    detail: Master of Global Commerce
+    # duration:
+    sub: 2019年9月 - 2020年7月
+    detail: 全球商务硕士 Master of Global Commerce
   - title: 广东外语外贸大学
-    duration: 2014年9月 - 2018年6月
-    sub: 经济学学士
-    detail: 国际经济与贸易
+    # duration: 
+    sub: 2014年9月 - 2018年6月
+    detail: 经济学学士
     
 - type: skills
   # name: "技术栈和编程语言"
