--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -27,13 +27,13 @@ contact: #联系方式连接等3~5行
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
 - type: education #类别为ID
-  name: 教育经历 #显示名称，空则使用type
+  name: 教育 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
   - title: 中山大学
     # duration: 
     sub: 2018年9月 - 2021年7月
     detail: 国际商务硕士
-  - title: UNIVERSITY OF VIRGINIA（弗吉尼亚大学）
+  - title: University of Virginia（弗吉尼亚大学）
     # duration:
     sub: 2019年9月 - 2020年7月
     detail: 全球商务硕士 Master of Global Commerce
@@ -42,7 +42,7 @@ main: #简历主要内容，
     sub: 2014年9月 - 2018年6月
     detail: 经济学学士
     
-- type: skills
+- type: 技能
   # name: "技术栈和编程语言"
   content:
   - title: 编程语言
@@ -58,30 +58,38 @@ main: #简历主要内容，
 - type: experience
   name: 工作经历
   content:
-  - title: 腾讯 - 数据科学
+  - title: 腾讯 - PCG大数据平台部 画像平台中心            数据科学
     sub: T5 - T7
     duration: "2021年7月 - 至今"
     tags:
-    - 标签
-    summary: 职务或者工作总结(自动折叠)
-    detail: 同时包含 summary和detail在Chrome，Safari(包括IOS)，Android和新版Firefox等会自动折叠，不支持折叠的浏览器和展开后表现一致
-    # open: open
+    - 画像挖掘
+    - 标签开发
+    - 指标监控
+    - 画像评测
+    - 画像提升
+    - 实验配置
+    # summary: 职务或者工作总结(自动折叠)
+    detail: 业务数据科学 - 负责新闻业务画像覆盖率、准确率提升项目，建立画像服务的关键运营指标体系和监控体系；平台数据运营 - 解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
+    open: open
     #可以设置open默认展开
-  - title: Job Title
-    sub: Your 2nd, Inc.  
-    duration: Apr 2013 - Mar 2016
-    tags: 
-    - tagname
-    summary: Summary your job or work. (Collapse)
-    detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  # - title: Job Title
+  #   sub: Your 2nd, Inc.  
+  #   duration: Apr 2013 - Mar 2016
+  #   tags: 
+  #   - tagname
+  #   summary: Summary your job or work. (Collapse)
+  #   detail: Details can be collapsed in Chrome Safari, Firefox, Opera and so on. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-- type: projects
+- type: 项目经验
   name: Projects
   content:
-  - title: 项目名称
-    duration: xxxx年xx月 - yyyy年yy月
+  - title: 新闻业务数据科学
+    duration: 开发者&数据分析
     detail: 项目和工作介绍，项目总结.
-    sub: 维护者
+    1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务
+    2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1
+    3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算
+    sub: 8个月
   - title: Project Name
     summary: Projects' introduction or summary
     detail:
@@ -118,8 +126,8 @@ footer: #脚注多组
   screen:
   - text: "简历脚注"
   #   href: '/'
-  - text: "Made with &hearts; by NewFuture"
-    href: "https://github.com/NewFuture/CV/"
+  - text: "Made with &hearts; by Hazelyang"
+    href: "https://hazelyang518.github.io/cv/"
 
 #页面额外js脚本，如xx统计
 scripts:
