--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -85,10 +85,7 @@ main: #简历主要内容，
   content:
   - title: 新闻业务数据科学
     duration: 开发者&数据分析
-    detail: 项目和工作介绍，项目总结.
-    1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务
-    2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1
-    3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算
+    detail: 项目和工作介绍，项目总结. 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务  2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1 3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算
     sub: 8个月
   - title: Project Name
     summary: Projects' introduction or summary
