--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -69,9 +69,7 @@ main: #简历主要内容，
     - 画像提升
     - 实验配置
     # summary: 职务或者工作总结(自动折叠)
-    detail: |
-    - 业务数据科学 - 负责新闻业务画像覆盖率、准确率提升项目，建立画像服务的关键运营指标体系和监控体系； 
-    - 平台数据运营 - 解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
+    detail: 业务数据科学 - 负责新闻业务画像覆盖率、准确率提升项目，建立画像服务的关键运营指标体系和监控体系； 平台数据运营 - 解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
     open: open
     #可以设置open默认展开
   # - title: Job Title
