--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -85,7 +85,8 @@ main: #简历主要内容，
   content:
   - title: 新闻业务数据科学
     duration: 开发者&数据分析
-    detail: 项目和工作介绍，项目总结. 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务  2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1 3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算
+    detail: 项目和工作介绍，项目总结. 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务 <br>  &nbsp &nbsp 2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1 <br>  &nbsp &nbsp 3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算 <br>  &nbsp &nbsp  4.画像评测：在准确率评估项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，耗时从1个月+降低到3日内完成，测评效率大幅度提升
+<br>  &nbsp &nbsp 5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优；结	合已有数据积累建立预估模型，为游戏数据表现以及市场分析提供结果预测  <br>  &nbsp &nbsp 6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；沉默用户拉起实验	中底层页人均消费时长显著正向，策略已推全
     sub: 8个月
   - title: Project Name
     summary: Projects' introduction or summary
