--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -58,18 +58,18 @@ main: #简历主要内容，
 - type: experience
   name: 工作经历
   content:
-  - title: 腾讯 - PCG大数据平台部   画像平台中心  数据科学
-    sub: T5 - T7
+  - title: 腾讯 - 数据科学
+    sub: PCG大数据平台部   画像平台中心 
     duration: "2021年7月 - 至今"
     tags:
-    - 画像挖掘
-    - 标签开发
-    - 指标监控
-    - 画像评测
-    - 画像提升
-    - 实验配置
+    # - 画像挖掘
+    # - 标签开发
+    # - 指标监控
+    # - 画像评测
+    # - 画像提升
+    # - 实验配置
     # summary: 职务或者工作总结(自动折叠)
-    detail: 业务数据科学 - 负责新闻业务画像覆盖率、准确率提升项目，建立画像服务的关键运营指标体系和监控体系；<br>  &nbsp &nbsp  平台数据运营 - 解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
+    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的关键运营指标体系和监控体系；<br>  &nbsp &nbsp  平台数据运营：解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
     open: open
     #可以设置open默认展开
   # - title: Job Title
@@ -85,13 +85,36 @@ main: #简历主要内容，
   content:
   - title: 新闻业务数据科学
     duration: 开发者&数据分析
-    detail: 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务 <br>  &nbsp &nbsp 2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1 <br>  &nbsp &nbsp 3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算 <br>  &nbsp &nbsp  4.画像评测：在准确率评估项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，耗时从1个月+降低到3日内完成，测评效率大幅度提升  <br>  &nbsp &nbsp 5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优；结	合已有数据积累建立预估模型，为游戏数据表现以及市场分析提供结果预测  <br>  &nbsp &nbsp 6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；沉默用户拉起实验	中底层页人均消费时长显著正向，策略已推全
-    sub: 8个月
-  - title: Project Name
-    summary: Projects' introduction or summary
-    detail:
-      md: _data/demo.md
-    sub: Creator and maintainer.
+    tags:
+    - Hive
+    - Spark
+    - 用户调研
+    - ABtest
+    detail: 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务 <br>  &nbsp &nbsp 
+            2.标签开发：建立并维护画像标签ETL链路，保障数据的完整性、准确性和一致性；按数仓规范进行标签开发，配置告警，推动标签产出效率从t+3提升到t+1 <br>  &nbsp &nbsp 
+            3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低任务配置难度，实现高效运算 <br>  &nbsp &nbsp  
+            4.画像评测：在准确率评估项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，耗时从1个月+降低到3日内完成，测评效率大幅度提升  <br>  &nbsp &nbsp 
+            5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优；结合已有数据积累建立预估模型，为游戏数据表现以及市场分析提供结果预测  <br>  &nbsp &nbsp 
+            6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；沉默用户拉起实验中底层页人均消费时长显著正向，策略已推全
+    sub: 10个月
+    - title: 画像平台数据运营
+    duration: 功能开发&运营负责人
+    tags:
+    - Hive
+    - Spark
+    - 数据分析
+    - 数据产品
+    detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链	路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp  
+            2.功能开发：针对分析报告生成时间过长的痛点，构建自动化分析模板，帮助看清页面广告投放效果，提高分析效率，报告生成时间从1人/日降低到半小时内完成，有效解决业务痛点，获得用户好评 <br>  &nbsp &nbsp  
+            3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行根因分析与修复，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp  
+            4.知识沉淀：沉淀平台使用指引、画像挖掘说明、ID能力介绍等，累计梳理文档30+篇，访问PV5w+次，UV1w+ <br>  &nbsp &nbsp  
+    sub: 10个月
+
+  # - title: Project Name
+  #   summary: Projects' introduction or summary
+  #   detail:
+  #     md: _data/demo.md
+  #   sub: Creator and maintainer.
    #可继续添加更多内容
 
 #others 其他简略内容(列表)
@@ -99,18 +122,19 @@ others: #其他列表显示
 - type: others #ID可以为空
   name: '其他'
   content: #选择需要的格式
-  - 单行文字
-  - title: "加粗:"
-    text: "列表项二"
-  - title: "兴趣:"
-    items: #单行列表
-    - 睡觉
-    - 吃饭
-    - coding
-  - title: 列表
-    list:
-    - 第一项
-    - 第二项
+  - 
+  - title: "奖项"
+    text: "连续获得两次Outstanding员工，腾讯卓越研发奖-腾讯新闻数据科学工业化项目团队成员"
+  - title: "认证:"
+    text: BG内数据科学通道培养计划课程认证
+  #   items: #单行列表
+  #   - 睡觉
+  #   - 吃饭
+  #   - coding
+  # - title: 列表
+  #   list:
+  #   - 第一项
+  #   - 第二项
 #- type: 
 #  name: '其他'
 #  content: #选择需要的格式
