--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -126,7 +126,7 @@ others: #其他列表显示
   - title: "奖项"
     text: "连续获得两次Outstanding员工，腾讯卓越研发奖-腾讯新闻数据科学工业化项目团队成员"
   - title: "认证:"
-    text: BG内数据科学通道培养计划课程认证
+    text: "BG内数据科学通道培养计划课程认证"
   #   items: #单行列表
   #   - 睡觉
   #   - 吃饭
