--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -53,11 +53,11 @@ main: #简历主要内容，
     - Spark
     - Data visualization
   - title: 个人技能总结
-    summary: 1. 在腾讯负责过画像数据分析/画像平台产品等项目，有完整的项目经验
-             2. 有画像业务的项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略
-             3. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如孤立森林等判异算法、聚类算法、XGBoost、GCN/GraphSage（熟悉）等
-             4. 具备数据分析、大数据开发等大数据分析处理能力。 包含hive、spark、python等
-             5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验
+    summary: 1. 在腾讯负责过画像数据分析/画像平台产品等项目，有完整的项目经验 <br>  &nbsp &nbsp
+             2. 有画像业务的项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略 <br>  &nbsp &nbsp
+             3. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如孤立森林等判异算法、聚类算法、XGBoost、GCN/GraphSage（熟悉）等 <br>  &nbsp &nbsp
+             4. 具备数据分析、大数据开发等大数据分析处理能力。 包含hive、spark、python等 <br>  &nbsp &nbsp
+             5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验 <br>  &nbsp &nbsp
 
 - type: experience
   name: 工作经历
