--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -32,11 +32,11 @@ main: #简历主要内容，
   - title: 中山大学
     # duration: 
     sub: 2018年9月 - 2021年7月
-    detail: 国际商务硕士
+    detail: 经济学硕士（国际商务方向）
   - title: University of Virginia（弗吉尼亚大学）
     # duration:
     sub: 2019年9月 - 2020年7月
-    detail: Master of Global Commerce 全球商务硕士
+    detail: Master of Science （Global Commerce）
   - title: 广东外语外贸大学
     # duration: 
     sub: 2014年9月 - 2018年6月
