--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -45,17 +45,16 @@ main: #简历主要内容，
 - type: 技能
   # name: "技术栈和编程语言"
   content:
-  - title: 编程语言
+  - title: 技术栈与
     items: #itmems 可以小块的方式显示
-    - SQL
-    - Python
+    - 编程语言：SQL Python
     - Hive
     - Spark
-    - Data visualization
+    - 数据可视化
   - title: 个人技能总结
-    summary: 1. 在腾讯负责过画像数据分析/画像平台产品等项目，有完整的项目经验 <br>  &nbsp &nbsp
-             2. 有画像业务的项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略 <br>  &nbsp &nbsp
-             3. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如孤立森林等判异算法、聚类算法、XGBoost、GCN/GraphSage（熟悉）等 <br>  &nbsp &nbsp
+    detail:  1. 有画像业务的完整项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略 <br>  &nbsp &nbsp
+             2. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如留存分析、漏斗分析、人群分析、RFM模型等 <br>  &nbsp &nbsp
+             3. 了解各类数据建模方法，如线性回归、SHAP value、逻辑回归、决策树以及因果分析的框架和要素 <br>  &nbsp &nbsp
              4. 具备数据分析、大数据开发等大数据分析处理能力。 包含hive、spark、python等 <br>  &nbsp &nbsp
              5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验 <br>  &nbsp &nbsp
 
@@ -73,7 +72,7 @@ main: #简历主要内容，
     # - 画像提升
     # - 实验配置
     # summary: 职务或者工作总结(自动折叠)
-    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的关键运营指标体系和监控体系；<br>  &nbsp &nbsp  平台数据运营：解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
+    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的关键运营指标体系和监控体系 <br>  &nbsp &nbsp  平台数据运营：解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
     open: open
     #可以设置open默认展开
   # - title: Job Title
