--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -101,13 +101,13 @@ main: #简历主要内容，
             6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；沉默用户拉起实验中底层页人均消费时长显著正向，策略已推全
     sub: 10个月
     
-  - title: 画像平台数据运营
+  - title: 画像平台数据开发
     duration: 功能开发&运营负责人
     tags:
     - Hive
     - Spark
     - 数据分析
-    - 数据产品
+    - 数据开发
     detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链	路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp  
             2.功能开发：针对分析报告生成时间过长的痛点，构建自动化分析模板，帮助看清页面广告投放效果，提高分析效率，报告生成时间从1人/日降低到半小时内完成，有效解决业务痛点，获得用户好评 <br>  &nbsp &nbsp  
             3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行根因分析与修复，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp  
@@ -129,7 +129,7 @@ others: #其他列表显示
   - 
   - title: "奖项"
     text: "连续获得两次Outstanding员工，腾讯卓越研发奖-腾讯新闻数据科学工业化项目团队成员，腾讯开源协同奖-数据资产管理(河图) Oteam"
-  - title: "认证:"
+  - title: "认证"
     text: "BG内数据科学通道培养计划课程认证"
   #   items: #单行列表
   #   - 睡觉
