--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -83,12 +83,13 @@ main: #简历主要内容，
     detail: 知识图谱产品经理：负责药学知识图谱面向药师端的产品功能策划及优化迭代，负责撰写需求文档，梳理数据结构，输出产品原型图，推动接入药品处方审核平台
     open: open
 
-    - title: 晨星资讯 - 数据分析（实习）
+  - title: 晨星资讯 - 数据分析（实习）
     sub:  全球基金部门
     duration: "2018年6月 - 2019年8月"
     tags:
     # summary: 职务或者工作总结(自动折叠)
-    detail: 金融数据分析师：负责建立全球主要金融市场的基金数据库，
+    detail: 金融数据分析师：负责建立全球主要金融市场的基金数据库，构建丰富的仪表板来支持质量检查（交互式/自动化/可视化），提高预测模型和底层数据的可解释性。
+    open: open
     
     #可以设置open默认展开
   # - title: Job Title
