--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -86,7 +86,7 @@ main: #简历主要内容，
     duration: "2018年6月 - 2019年8月"
     tags:
     # summary: 职务或者工作总结(自动折叠)
-    detail: 金融数据分析师：负责建立全球主要金融市场的基金数据库，构建dashboard以支持数据质量检查（交互式/自动化/可视化），提高预测模型和底层数据的可解释性。
+    detail: 金融数据分析师：负责建立全球主要金融市场的基金数据库，构建dashboard以支持数据质量检查（交互式/自动化/可视化），提高预测模型和底层数据的可解释性
     
     open: open    
     #可以设置open默认展开
