--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -53,9 +53,9 @@ main: #简历主要内容，
     - 数据可视化
   - title: 个人技能总结
     detail:  1. 有画像业务的完整项目经验，有独立分析和解决数据问题的能力，能针对画像场景进行有效数据挖掘并形成策略 <br>  &nbsp &nbsp
-             2. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如留存分析、漏斗分析、人群分析、RFM模型等 <br>  &nbsp &nbsp
+             2. 掌握多种数据分析模型，了解多种技术选型，并能有效应用于画像服务中。如留存、漏斗、人群分析、RFM模型等 <br>  &nbsp &nbsp
              3. 了解各类数据建模方法，如线性回归、SHAP value、逻辑回归、决策树以及因果分析的框架和要素 <br>  &nbsp &nbsp
-             4. 具备数据分析、大数据开发等大数据分析处理能力。 包含hive、spark、python等 <br>  &nbsp &nbsp
+             4. 具备数据分析、大数据开发等分析处理能力。 包含hive、spark、python等 <br>  &nbsp &nbsp
              5. 工作认真负责、勇于担当、沟通和团队协作能力强；能力综合，有独立管理和运营项目的经验 
 
 - type: experience
