--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -72,7 +72,7 @@ main: #简历主要内容，
     # - 画像提升
     # - 实验配置
     # summary: 职务或者工作总结(自动折叠)
-    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的关键运营指标体系和监控体系 <br>  &nbsp &nbsp  平台数据运营：解决用户在使用画像平台过程中遇到的数据问题，为业务提供可靠的画像服务
+    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的关键运营指标体系和监控体系 <br>  &nbsp &nbsp  平台数据开发：作为开发者完成数据平台的链路搭建和功能上线，为业务提供可靠的画像服务
     
   # - title: 京东 - 数据产品 (实习)
   #   sub:  人工智能事业部 
@@ -123,7 +123,7 @@ main: #简历主要内容，
     - Spark
     - 数据分析
     - 数据开发
-    detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链	路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp  
+    detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp  
             2.功能开发：针对分析报告生成时间过长的痛点，构建自动化分析模板，帮助看清页面广告投放效果，提高分析效率，报告生成时间从1人/日降低到半小时内完成，有效解决业务痛点，获得用户好评 <br>  &nbsp &nbsp  
             3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行根因分析与修复，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp  
             4.知识沉淀：沉淀平台使用指引、画像挖掘说明、ID能力介绍等，累计梳理文档30+篇，访问PV5w+次，UV1w+ <br>  &nbsp &nbsp  
