--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -32,7 +32,7 @@ main: #简历主要内容，
   - title: 中山大学
     # duration: 
     sub: 2018年9月 - 2021年7月
-    detail: 经济学类硕士 
+    detail: 经济学类硕士 - 国际商务硕士
   - title: University of Virginia (弗吉尼亚大学)
     # duration:
     sub: 2019年9月 - 2020年7月
@@ -108,11 +108,11 @@ main: #简历主要内容，
     - Spark
     - 用户调研
     - ABtest
-    detail: 1.画像挖掘：使用SQL/Python挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于人群投放场景，标签累计创建人群1000+，产生20+正向场景，覆盖PCG、IEG等BG的多个业务 <br>  &nbsp &nbsp 
+    detail: 1.画像挖掘：挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于运营增长场景，特征在广告模型中推全，增加业务全年累计提升收益40万/天 <br>  &nbsp &nbsp 
             2.数据应用：建立并维护ID-mapping标签ETL链路，保障数据的完整性、准确性和一致性；负责统一设备ID的推广应用，对接业务方30+，对 uni-ID 的运营取得从0到200亿+/天服务调用量的成绩 <br>  &nbsp &nbsp 
-            3.指标监控：配置新闻业务各场景用户的画像覆盖度监控，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低配置难度，实现高效运算 <br>  &nbsp &nbsp  
-            4.画像评测：在准确率评估项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，耗时从1个月+降低到3日内完成，测评效率大幅度提升  <br>  &nbsp &nbsp 
-            5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优; 统筹多方资源，实现千人千面画像调研问卷的快速上线，成功在端内向100w+用户发放问卷并回收结果用于提升画像  <br>  &nbsp &nbsp 
+            3.指标监控：开发新闻业务各场景用户的画像覆盖度监控看板，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低配置难度，实现高效运算 <br>  &nbsp &nbsp  
+            4.画像评测：在画像质量检测项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，项目耗时从1个月+降低到3日内完成，测评效率大幅度提升  <br>  &nbsp &nbsp 
+            5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优; 统筹多方资源，实现千人千面画像调研问卷的快速上线，成功在端内向100w+用户发放问卷并回收结果用于提升画像质量  <br>  &nbsp &nbsp 
             6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；多个实验中用户人均消费时长等关键指标显著正向，均已推全上线
     sub: 开发者&数据分析
     
@@ -125,7 +125,7 @@ main: #简历主要内容，
     - 数据开发
     detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp  
             2.功能开发：针对分析报告生成时间过长的痛点，构建自动化分析模板，帮助看清页面广告投放效果，提高分析效率，报告生成时间从1人/日降低到半小时内完成，有效解决业务痛点，获得用户好评 <br>  &nbsp &nbsp  
-            3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行原因分析与修复，向业务开展多次画像平台资产与功能介绍课程，累计参与人数200+，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp  
+            3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行原因分析与修复，向业务开展多次画像平台资产与功能介绍课程，累计参与人数1000+，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp  
             4.知识沉淀：沉淀平台使用指引、画像挖掘说明、ID能力介绍等，累计梳理文档30+篇，访问PV5w+次，UV1w+
     sub: 功能开发&运营负责人
 
