--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -1,9 +1,9 @@
 # 数据格式可以为 yaml(文件以.yml结尾) 或者json(文件以.json结尾)
 # 如果YAML格式的数据请先检查格式是否有误，可选检查工具 http://www.yamllint.com
 
-title: "杨诗蕙简历"
+title: "卜亚风简历"
 lang: "zh" #语言设置 zh表示中文 en 表示英语
-name: "杨诗蕙"
+name: "卜亚风"
 jobtitle: "数据科学" #可空不显示
 photo: "assets/img/WechatIMG29.jpeg" #照片可空，不显示
 
