--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -39,7 +39,8 @@ main: #简历主要内容，
   content:
   - title: 技术栈与编程语言
     items: #itmems 可以小块的方式显示
-    - 编程语言：SQL Python
+    - 编程语言：SQL
+    - Python
     - Hive
     - Spark
     - 数据可视化
@@ -53,9 +54,9 @@ main: #简历主要内容，
 - type: experience
   name: 工作经历
   content:
-  - title: 腾讯 - 数据科学
+  - title: 亿达信息技术有限公司｜数据挖掘
     sub: PCG大数据平台部   数据挖掘中心
-    duration: "2021年7月 - 至今"
+    duration: "2019年3月 - 至今"
     tags:
     # - 画像挖掘
     # - 标签开发
@@ -64,14 +65,14 @@ main: #简历主要内容，
     # - 画像提升
     # - 实验配置
     # summary: 职务或者工作总结(自动折叠)
-    detail: 业务数据科学：负责新闻业务画像覆盖率、准确率提升，建立画像服务的指标监控体系 <br>  &nbsp &nbsp  平台数据开发：作为开发者完成数据平台的链路搭建和功能上线，为业务提供可靠的画像平台服务
+    detail: 负责大模型在数据分析领域的多个场景落地； <br>  &nbsp &nbsp  以往负责业务安全平台的日常运营和部分中台的前端开发工作。
 
-  # - title: 京东 - 数据产品 (实习)
-  #   sub:  人工智能事业部
-  #   duration: "2019年6月 - 2019年8月"
-  #   tags:
-  #   # summary: 职务或者工作总结(自动折叠)
-  #   detail: 知识图谱产品经理：负责药学知识图谱面向药师端的产品功能策划及优化迭代，负责撰写需求文档，梳理数据结构，输出产品原型图，推动接入药品处方审核平台
+  - title: 中软国际科技服务有限公司
+    sub:  人工智能事业部
+    duration: "2017年2月 - 2019年2月"
+    tags:
+    summary: Python开发
+    detail: 负责网管产品U2000对应的模拟器项目的二次开发和版本维护工作；按照需求文档，完成模拟器管理平台的模块设计、开发工作。
 
   # - title: 晨星资讯 - 数据分析 (实习)
   #   sub:  全球基金部门
@@ -93,39 +94,44 @@ main: #简历主要内容，
 - type: Projects
   name: 项目经验
   content:
-  - title: 新闻业务数据科学
-    duration:
+  - title: 大模型场景落地
+    duration: 2023年3月 - 至今
     tags:
-    - Hive
-    - Spark
-    - 用户调研
-    - ABtest
-    detail: 1.画像挖掘：挖掘各类核心标签，如用户应用偏好标签、人群属性标签，用于运营增长场景，特征在广告模型中推全，增加业务全年累计提升收益40万/天 <br>  &nbsp &nbsp
-            2.数据应用：建立并维护ID-mapping标签ETL链路，保障数据的完整性、准确性和一致性；负责统一设备ID的推广应用，对接业务方30+，对 uni-ID 的运营取得从0到200亿+/天服务调用量的成绩 <br>  &nbsp &nbsp
-            3.指标监控：开发新闻业务各场景用户的画像覆盖度监控看板，覆盖新闻主端app、微信新闻插件、手q新闻插件等产品形态，包括100+标签；利用ClickHouse计算画像覆盖度，降低配置难度，实现高效运算 <br>  &nbsp &nbsp
-            4.画像评测：在画像质量检测项目中，创新性搭建可复用的自动化画像测评流程，实现问卷自动生成与回收结果，产出画像准确率分析报告，项目耗时从1个月+降低到3日内完成，测评效率大幅度提升  <br>  &nbsp &nbsp
-            5.画像提升：负责新闻业务兴趣画像置信度指标测算，对置信度低的画像进行原因挖掘，推动画像算法策略调优; 统筹多方资源，实现千人千面画像调研问卷的快速上线，成功在端内向100w+用户发放问卷并回收结果用于提升画像质量  <br>  &nbsp &nbsp
-            6.实验配置：产出微信腾讯新闻插件实验人群，配置实验人群包，跟进回收并分析人群实验效果；多个实验中用户人均消费时长等关键指标显著正向，均已推全上线
-    sub: 开发者&数据分析
+    - 数据加工
+    - Prompt设计
+    - 模型微调
+    - 模型评测
+    summary: 1.商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）； <br>  &nbsp &nbsp 2.智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
+    detail: 1.数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式； <br>  &nbsp &nbsp
+            2.模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型（ChatGLM2-6B、Baichuan2-7B、Qwen-14B）； <br>  &nbsp &nbsp
+            3.模型微调：借助Prompt和LoRA微调技术，优化模型效果； <br>  &nbsp &nbsp
+            4.验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
+    sub: 数据挖掘
 
-  - title: 画像平台数据工程
-    duration:
+  - title: 星迹-业务安全风控平台
+    duration: 2019年3月 - 2023年2月
     tags:
-    - Hive
-    - Spark
-    - 数据分析
-    - 数据开发
-    detail: 1.数据开发：推动建立全域画像标签库，开发并接入100+标签底层数据到画像平台；重构并维护标签字典表产出链路，推动字典存储从Mysql升级到Elasticsearch，支持百万级字典查询，实现性能提升 <br>  &nbsp &nbsp
-            2.功能开发：针对分析报告生成时间过长的痛点，构建自动化分析模板，帮助看清页面广告投放效果，提高分析效率，报告生成时间从1人/日降低到半小时内完成，有效解决业务痛点，获得用户好评 <br>  &nbsp &nbsp
-            3.用户运营：作为owner整体负责画像的运营和数据分析工作，包含业务接入推广、用户反馈处理、badcase分析，对业务画像应用过程中的问题进行原因分析与修复，向业务开展多次画像平台资产与功能介绍课程，累计参与人数1000+，用户服务满意度在技术公线内前5% <br>  &nbsp &nbsp
-            4.知识沉淀：沉淀平台使用指引、画像挖掘说明、ID能力介绍等，累计梳理文档30+篇，访问PV5w+次，UV1w+
+    - Python
+    - SQL
+    - Echarts
+    summary: 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
+    detail: 1.后台开发：参与平台的风控模块开发，以及策略维护； <br>  &nbsp &nbsp
+            2.报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理； <br>  &nbsp &nbsp
+            3.安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环； <br>  &nbsp &nbsp
+            3.用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题； <br>  &nbsp &nbsp
+            4.知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
     sub: 功能开发&运营负责人
 
-  # - title: Project Name
-  #   summary: Projects' introduction or summary
-  #   detail:
-  #     md: _data/demo.md
-  #   sub: Creator and maintainer.
+  - title: P模拟器二次开发及版本管理
+    duration: 2017年2月 - 2019年1月
+    tags:
+    - Python网络编程
+    - 通信协议
+    - Flask
+    summary: 模拟器二次开发：模拟基站与网管之间的交互；版本管理：主要针对已发布的模拟器版本进行web界面管理，针对已经安装的模拟器，通过web界面，进行远程维护，对外项目组有租赁的功能。
+    detail: 负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；同时负责模拟器版本管理web网站的开发。
+      md: 这是啥？
+    sub: Python开发
    #可继续添加更多内容
 
 #others 其他简略内容(列表)
