--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -130,7 +130,7 @@ main: #简历主要内容，
     - Flask
     summary: 模拟器二次开发：模拟基站与网管之间的交互；版本管理：主要针对已发布的模拟器版本进行web界面管理，针对已经安装的模拟器，通过web界面，进行远程维护，对外项目组有租赁的功能。
     detail: 负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；同时负责模拟器版本管理web网站的开发。
-      md: 这是啥？
+      # md: 这是啥？
     sub: Python开发
    #可继续添加更多内容
 
