--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -12,17 +12,9 @@ contact: #联系方式连接等3~5行
 - text: "yafengbu@gmail.com" #文本内容
   href: 'mailto:yafengbu@gmail.com' #链接，无链接则空
   icon: 'icons/email.svg' #图标 svg文件
+  # attr: 'target="_blank"' #新标签页打开
 - text: "+86 15029074256"
   icon: 'icons/phone.svg'
-  # - text: "your-website.com"
-  #  href: 'http://your-website.com'
-  #  icon: 'icons/web.svg'
-  # - text: "GitHubID"
-  #  href: 'https://github.com/NewFuture'
-  #  icon: "icons/github.svg"
-  #  attr: 'target="_blank"' #新标签页打开
-  # - text: "地址"
-  #   icon: "icons/location.svg"
 
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
@@ -30,8 +22,8 @@ main: #简历主要内容，
   name: 教育 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
   - title: 西安邮电大学
-    # duration:
-    sub: 2014年9月 - 2018年6月
+    duration: 2013年9月 - 2017年7月
+    sub: 这个sub是个啥
     detail: 智能科学与技术｜学士
 
 - type: 技能
@@ -54,35 +46,22 @@ main: #简历主要内容，
 - type: experience
   name: 工作经历
   content:
-  - title: 亿达信息技术有限公司｜数据挖掘
-    sub: PCG大数据平台部   数据挖掘中心
-    duration: "2019年3月 - 至今"
+  - title: 亿达信息技术有限公司
+    sub: 数据挖掘
+    duration: 2019年3月 - 至今
     tags:
-    # - 画像挖掘
-    # - 标签开发
-    # - 指标监控
-    # - 画像评测
-    # - 画像提升
-    # - 实验配置
+    - 数据挖掘
+    - 模型落地
     # summary: 职务或者工作总结(自动折叠)
     detail: 负责大模型在数据分析领域的多个场景落地； <br>  &nbsp &nbsp  以往负责业务安全平台的日常运营和部分中台的前端开发工作。
 
   - title: 中软国际科技服务有限公司
-    sub:  人工智能事业部
-    duration: "2017年2月 - 2019年2月"
+    sub:  Python开发
+    duration: 2017年2月 - 2019年2月
     tags:
-    summary: Python开发
+    # summary: Python开发
     detail: 负责网管产品U2000对应的模拟器项目的二次开发和版本维护工作；按照需求文档，完成模拟器管理平台的模块设计、开发工作。
-
-  # - title: 晨星资讯 - 数据分析 (实习)
-  #   sub:  全球基金部门
-  #   duration: "2018年6月 - 2018年8月"
-  #   tags:
-  #   # summary: 职务或者工作总结(自动折叠)
-  #   detail: 金融数据分析师：负责建立全球主要金融市场的基金数据库，构建dashboard以支持数据质量检查（交互式/自动化/可视化），提高预测模型和底层数据的可解释性
-
-    open: open
-    #可以设置open默认展开
+    open: open #可以设置open默认展开
   # - title: Job Title
   #   sub: Your 2nd, Inc.
   #   duration: Apr 2013 - Mar 2016
@@ -107,6 +86,7 @@ main: #简历主要内容，
             3.模型微调：借助Prompt和LoRA微调技术，优化模型效果； <br>  &nbsp &nbsp
             4.验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
     sub: 数据挖掘
+    open: open
 
   - title: 星迹-业务安全风控平台
     duration: 2019年3月 - 2023年2月
@@ -121,8 +101,9 @@ main: #简历主要内容，
             3.用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题； <br>  &nbsp &nbsp
             4.知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
     sub: 功能开发&运营负责人
+    open: open
 
-  - title: P模拟器二次开发及版本管理
+  - title: 模拟器二次开发及版本管理
     duration: 2017年2月 - 2019年1月
     tags:
     - Python网络编程
@@ -130,8 +111,8 @@ main: #简历主要内容，
     - Flask
     summary: 模拟器二次开发：模拟基站与网管之间的交互；版本管理：主要针对已发布的模拟器版本进行web界面管理，针对已经安装的模拟器，通过web界面，进行远程维护，对外项目组有租赁的功能。
     detail: 负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；同时负责模拟器版本管理web网站的开发。
-      # md: 这是啥？
     sub: Python开发
+    open: open
    #可继续添加更多内容
 
 #others 其他简略内容(列表)
