--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -21,8 +21,8 @@ main: #简历主要内容，
 - type: education #类别为ID
   name: 教育背景 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
-  - title: 西安邮电大学
-    duration: 2013年9月 - 2017年7月
+  - title: 西安邮电大学｜2013年9月 - 2017年7月
+    duration:
     sub: 智能科学与技术｜学士
     detail: 主修课程：概率论与随机过程、计算机网络、算法设计与分析、机器学习、模式识别、自然语言理解等。
 
@@ -86,7 +86,7 @@ main: #简历主要内容，
             2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型（ChatGLM2-6B、Baichuan2-7B、Qwen-14B）； <br>  &nbsp &nbsp
             3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果； <br>  &nbsp &nbsp
             4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
-    # open: open
+    open: open
 
   - title: 星迹-业务安全风控平台｜功能开发&运营负责人
     sub: 2019年3月 - 2023年2月
@@ -101,7 +101,7 @@ main: #简历主要内容，
             3. 安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环； <br>  &nbsp &nbsp
             4. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题； <br>  &nbsp &nbsp
             5. 知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
-    # open: open
+    open: open
 
   - title: 模拟器二次开发及版本管理｜Python开发
     sub: 2017年2月 - 2019年1月
