--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -81,12 +81,12 @@ main: #简历主要内容，
     - Prompt设计
     - 模型微调
     - 模型评测
-    summary: 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）； <br>  &nbsp &nbsp 2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
+    summary: 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）； <br>  2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
     detail: 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式； <br>  &nbsp &nbsp
             2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型（ChatGLM2-6B、Baichuan2-7B、Qwen-14B）； <br>  &nbsp &nbsp
             3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果； <br>  &nbsp &nbsp
             4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
-    open: open
+    # open: open
 
   - title: 星迹-业务安全风控平台｜功能开发&运营负责人
     sub: 2019年3月 - 2023年2月
