--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -19,14 +19,14 @@ contact: #联系方式连接等3~5行
 #main下面是主体内容，类别条数不限
 main: #简历主要内容，
 - type: education #类别为ID
-  name: 教育背景 #显示名称，空则使用type
+  name: 教育 #显示名称，空则使用type
   content: #内容基本格式 标题-副标题-日期-详细内容 (都允许空)
   - title: 西安邮电大学
     sub: 智能科学与技术｜学士
     duration: 2013年9月 - 2017年7月
     detail: 主修课程：概率论与随机过程、计算机网络、算法设计与分析、机器学习、模式识别、自然语言理解等。
 
-- type: 个人技能
+- type: 技能
   # name: 技术栈和编程语言
   content:
   - title: 技术栈与编程语言
