--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -60,7 +60,7 @@ main: #简历主要内容，
     duration: 2017年2月 - 2019年2月
     tags:
     # summary: Python开发
-    detail: 负责网管产品U2000对应的模拟器项目的二次开发和版本维护工作；按照需求文档，完成模拟器管理平台的模块设计、开发工作。
+    detail: 负责网管产品U2000对应的模拟器项目的开发和版本维护工作； <br>  &nbsp &nbsp  按照需求文档，完成模拟器管理平台的模块设计、开发工作。
     open: open #可以设置open默认展开
   # - title: Job Title
   #   sub: Your 2nd, Inc.
@@ -106,15 +106,16 @@ main: #简历主要内容，
             5. 知识沉淀：沉淀小助手的各类问题300+，以供用户FAQ。
     open: open
 
-  - title: 模拟器二次开发及版本管理
+  - title: 模拟器开发及版本管理
     sub: Python开发
     duration: 2017年2月 - 2019年1月
     tags:
     - Python网络编程
     - 通信协议
     - Flask
-    summary: 模拟器二次开发：模拟基站与网管之间的交互；版本管理：主要针对已发布的模拟器版本进行web界面管理，针对已经安装的模拟器，通过web界面，进行远程维护，对外项目组有租赁的功能。
-    detail: 负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）；同时负责模拟器版本管理web网站的开发。
+    summary: 1. 模拟器开发：模拟基站与网管之间的交互； <br>  2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
+    detail: 1. 后台开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）； <br>  &nbsp &nbsp
+            2. 平台设计开发：负责模拟器版本管理web网站的设计和开发。
     open: open
    #可继续添加更多内容
 
