--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -81,8 +81,8 @@ main: #简历主要内容，
     - Prompt设计
     - 模型微调
     - 模型评测
-    summary: 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）； <br>  2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
-    detail: 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式； <br>  &nbsp &nbsp
+    summary: 项目描述： <br> 1. 商业化标签抽取：使用大模型相关技术，从众多产品的二方数据中，挖掘商业化标签（商品类别、SPU）； <br>  2. 智能化数据分析引擎：用AI开启对话式数据分析，从而提高数据资产的使用效率，同时显著降低了数据分析的门槛。
+    detail: 主要职责： <br> 1. 数据处理：对业务方提供的数据，进行清洗加工，整理成模型需要的格式； <br>  &nbsp &nbsp
             2. 模型评估筛选：对司内机器学习平台提供的中文对话模型，进行评估，筛选出适用于自己业务场景的模型； <br>  &nbsp &nbsp
             3. 模型微调：借助Prompt和LoRA微调技术，优化模型效果； <br>  &nbsp &nbsp
             4. 验证并迭代：借助Python接口调用对模型结果进行验证并迭代，直到准确率到90%以上。
@@ -98,8 +98,8 @@ main: #简历主要内容，
     - Python
     - SQL
     - Echarts
-    summary: 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
-    detail: 1. 后台开发：参与平台的风控模块开发，以及策略维护； <br>  &nbsp &nbsp
+    summary: 项目描述： <br> 一站式安全运营平台，业务接入之后，在web端可视化策略编排，实现全链路的监控和运营数据管理，依赖于业务多年沉淀的风控画像以及多个场景的风控策略，快速实现业务安全防护。
+    detail: 主要职责： <br> 1. 后台开发：参与平台的风控模块开发，以及策略维护； <br>  &nbsp &nbsp
             2. 报表开发：借助已有的BI平台，创建门户，进行相关业务的运营报表开发及管理； <br>  &nbsp &nbsp
             3. 安全助理：关注星迹平台的相关告警，联系相关负责人推进修复，直至告警闭环； <br>  &nbsp &nbsp
             4. 用户运营：以小助手的身份，协助用户接入，并解答使用过程中的各类问题； <br>  &nbsp &nbsp
@@ -113,8 +113,8 @@ main: #简历主要内容，
     - Python网络编程
     - 通信协议
     - Flask
-    summary: 1. 模拟器开发：模拟基站与网管之间的交互； <br>  2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
-    detail: 1. 模块开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）； <br>  &nbsp &nbsp
+    summary: 项目描述： <br> 1. 模拟器开发：模拟基站与网管之间的交互； <br>  2. 版本管理：模拟器版本的web界面管理，远程维护，以及对外租赁。
+    detail: 主要职责： <br> 1. 模块开发：负责对网管产品U2000下发的请求做出正确的响应，同样支持模拟器对U2000主动发送原语（如：告警）； <br>  &nbsp &nbsp
             2. 需求设计：负责模拟器版本管理web网站的设计； <br>  &nbsp &nbsp
             3. 全栈开发：独立完成版本管理平台的前后端开发。
     open: open
